# crypto-intelligence-agent

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
agents/: supervisor.py
agents/analyzers/: market_structure_analyzer.py  risk_analyzer.py  sentiment_analyzer.py
agents/collectors/: funding_rate_collector.py  news_collector.py  onchain_collector.py  price_collector.py  social_collector.py
api/: deps.py  main.py  schemas.py
api/routes/: health.py  history.py  report.py
config/: logging_config.py  settings.py
data_sources/: base.py  factory.py
data_sources/binance/: binance_funding_rate.py  binance_price.py
data_sources/coingecko/: coingecko_price.py
data_sources/mock/: mock_funding_rate.py  mock_news.py  mock_onchain.py  mock_price.py  mock_social.py
data_sources/news/: rss_feed.py
docs/: api_examples.md  architecture.md  demo.md  demo_assets_checklist.md  portfolio_copy.md  smoke_test_checklist.md
graph/: aggregator.py  edges.py  hmm_regime.py  pipeline.py  state.py  trend.py
publishers/: base.py  telegram_publisher.py
scheduler/: job.py  runner.py
services/: cache.py  rate_limiter.py  retry.py
storage/: report_history.py
telegram_bot/: main.py
tests/: conftest.py
tests/integration/: test_api.py  test_history_api.py  test_pipeline.py
tests/unit/: test_adapters.py  test_aggregator.py  test_analyzers.py  test_binance_adapter.py  test_coingecko_adapter.py  test_funding_rate_adapter.py  test_funding_rate_collector.py  test_history_formatter.py  test_hmm_regime.py  test_market_structure_polish.py  test_rss_feed.py  (+9 more)
(+14 files in other folders)
