[project]
name = "crypto-intelligence-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "anthropic>=0.34",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "aiosqlite>=0.20",
    "apscheduler>=3.10,<4",
    "feedparser>=6.0",
    "python-telegram-bot>=20.8",
    "hmmlearn>=0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "api", "config", "data_sources", "graph", "publishers", "services", "storage", "telegram_bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
